tweaks and 2 games

--- a/scripts/go-tl/index.html
+++ b/scripts/go-tl/index.html
@@ -142,7 +142,9 @@
             <li><a href="https://go-tl.com/images/images.html">Imajen ne'ebé kria husi AI ba artista sira kona-ba Timor husi gerador tempu tuku lulik (AI generated images for artists about Timor from the bedtime generator)</a></li>            
             <li><a href="https://go-tl.com/stories/archive.html">Istória sira antes toba nian (Past Bedtime Stories)</a></li>
             <li><a href="https://go-tl.com/stories/editor.html">Editór Istória nian (Story Editor)</a></li>
-            <li><a href="https://go-tl.com/games/trivia.html">Jogu Trivia Timor Leste (Trivia Game)</a></li>
+            <li><a href="https://go-tl.com/games/match.html">Jogu Korrespondénsia Vokabuláriu TEFL (Matching Game)</a></li>
+            <li><a href="https://go-tl.com/games/hangman.html">Jogu Hangman Timor-Leste nian (Hangman game)</a></li>
+            <li><a href="https://go-tl.com/games/trivia.html">Jogu Trivia Timor Leste nian (Trivia Game)</a></li>
             <li><a href="https://go-tl.com/links.html">Ligasaun Loron-loron Timor Leste (Timor Leste Daily Links)</a></li>
             <li><a href="https://translate.go-tl.com/2way">Tradutór Rua-Dalan (LLM Two-way Translator)</a></li>
             <li><a href="https://go-tl.com/draw.html">Pájina Web Desenho nian (Drawing Web Page)</a></li>
